--- a/iClock/iClock.csproj
+++ b/iClock/iClock.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
@@ -47,6 +48,5 @@
 
   <ItemGroup>
     <Folder Include="DataAccessLayer\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
